<resources>
    <string name="app_name">健康助手</string>

    <string name="setting_account">我的资料</string>
    <string name="setting_setup">密码设置</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登陆</string>
    <string name="setting_delete_account">注销账号</string>
    <string name="setting_setup_del">账号和系统设置</string>
    <string name="loginSuccessfully">操作成功</string>
    <string name="loginUnsuccessfully">操作失败</string>
    <string name="registerSuccessfully">注册成功</string>
    <string name="registerUnsuccessfully">注册失败</string>
    <string name="loadUnsuccessfully">加载失败，请检查网络</string>
    <string name="loadSuccessfully">操作成功</string>
    <string name="loadUnsuccessfulAboutParams">操作失败，请检查请求参数或链接</string>
    <string name="doctor_default_intro">%1$s医生，%2$s专家，拥有丰富的临床经验，专注于提供专业医疗咨询和服务</string>
</resources>
