<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MineFragment">

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/settingHeadBgImageView"
                    android:contentDescription="@null"
                    android:background="@color/colorDarkText"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_marginTop="-5dp"
                    android:padding="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:padding="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/settingAvatar"
                            android:contentDescription="@null"
                            android:layout_width="65dp"
                            android:layout_height="65dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/settingNickname"
                            android:layout_marginTop="5dp"
                            android:text="默认用户"
                            android:layout_marginRight="10dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorLight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:background="@drawable/bg_setting_info"
                            android:id="@+id/settingInfoTextView"
                            android:layout_marginTop="8dp"
                            android:text="欢迎观临～"
                            android:textSize="12sp"
                            android:textColor="@color/colorLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <androidx.core.widget.NestedScrollView
                android:background="@drawable/fragment_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_marginTop="15dp"
                        android:id="@+id/rl_edit_mine"
                        android:padding="12dp"
                        android:background="@drawable/line_bot"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/nav_menu_person"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:text="@string/setting_account"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_edit_pwd"
                        android:layout_marginTop="15dp"
                        android:padding="12dp"
                        android:background="@color/colorLight"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/nav_menu_edit"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:text="@string/setting_setup"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_fav"
                        android:layout_marginTop="15dp"
                        android:padding="12dp"
                        android:background="@color/colorLight"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/like1"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:text="我的点赞"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_about"
                        android:layout_marginTop="15dp"
                        android:padding="12dp"
                        android:background="@color/colorLight"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/nav_menu_about"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:text="@string/setting_about"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_logout"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:padding="12dp"
                        android:background="@color/colorLight"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/nav_menu_logout"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="40dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:text="@string/setting_logout"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>
                    
                    <RelativeLayout
                        android:id="@+id/rl_delete_account"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:padding="12dp"
                        android:background="@color/colorLight"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="2dp"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/nav_menu_logout"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                        <TextView                            android:layout_centerVertical="true"                            android:layout_marginLeft="40dp"                            android:textSize="14sp"                            android:textColor="#FF3B30"                            android:text="@string/setting_delete_account"                            android:layout_gravity="center"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="6dp"
                            android:src="@mipmap/btn_go_gray"
                            android:contentDescription="@null"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>